@@ -136,6 +136,9 @@
 	email = "lao.geek_AT_gmail.com"
 	wikiuser = "lao"
     [/entry]
+    [entry]
+        name = "Steven Oxley (xonev)"
+    [/entry]
 [/about]
 
 [about]
